nouveau site web

--- a/projets.html
+++ b/projets.html
@@ -29,32 +29,61 @@
     </header>
     <nav class="corpAvant">
         <div class="texteTitre">
-            ACCUEIL,<br />
-            DEVELOPPEMENTS, PROJETS,<br /> INTERACTIVITE, DESIGN AND FREE.
+            PROJETS,<br />
+            JOYSTICK, JDR,<br /> JDS, ET DEVELOPPEMENT.
         </div>
     </nav>
     <nav class="corpArriere">
         <div class="paragraphe" id="1 1">
             <div class="gauche">
-                <h1>L'histoire</h1>
+                <h1>JOYSTICK</h1>
                 Colonisation de Madagascar par des Austronésiens à partir du début début de l’ère chrétienne3. L’île de Madagascar est peuplée de Pygmées venus d’Afrique (les mystérieux Vazimbas). Au début de l’ère chrétienne, des Indonésiens auraient débarqué dans l’île après avoir longé la côte orientale de l’Afrique. Vers la même époque, ces Indonésiens auraient introduit des plantes asiatiques jusqu’alors inconnues dans cette région, telles l’igname, la banane et la noix de coco.
             </div>
             <div class="middle" id="1 2"></div>
             <div class="droite">
-                <h1>L'histoire</h1>
+                <h1>SON JEU</h1>
                 L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne. Second berceau de la civilisation occidentale après Athènes, la ville fut successivement le centre de la monarchie romaine, de la république romaine (509 av. J.-C. – 27 av. J.-C.), puis de l'Empire romain (27 av. J.-C. – 330). Durant cette période, où nait la célèbre expression proverbiale « tous les chemins mènent à Rome », la ville aurait compté entre un et deux millions d'habitants et domine l'Europe, l'Afrique du Nord et le Moyen-Orient tant militairement que culturellement, diffusant dans ces territoires la langue latine, ses arts et techniques ainsi que la religion chrétienne. Depuis le ier siècle elle abrite le siège de l'Église catholique romaine, au sein des États pontificaux (752-1870) puis de la Cité du Vatican.
             </div>
         </div>
+
         <div class="paragraphe" id="2 1">
             <div class="gauche">
-                <h1>L'histoire</h1>
+                <h1>JEU DE RÔLE</h1>
                 Colonisation de Madagascar par des Austronésiens à partir du début début de l’ère chrétienne3. L’île de Madagascar est peuplée de Pygmées venus d’Afrique (les mystérieux Vazimbas). Au début de l’ère chrétienne, des Indonésiens auraient débarqué dans l’île après avoir longé la côte orientale de l’Afrique. Vers la même époque, ces Indonésiens auraient introduit des plantes asiatiques jusqu’alors inconnues dans cette région, telles l’igname, la banane et la noix de coco.
                 <br /><br /><br /><br />
                 <button type="button" class="btn btn-success btn-lg">Success</button>
             </div>
             <div class="middle" id="2 2"></div>
             <div class="droite">
-                <h1>L'histoire</h1>
+                <h1>ACF</h1>
+                L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne. Second berceau de la civilisation occidentale après Athènes, la ville fut successivement le centre de la monarchie romaine, de la république romaine (509 av. J.-C. – 27 av. J.-C.), puis de l'Empire romain (27 av. J.-C. – 330). Durant cette période, où nait la célèbre expression proverbiale « tous les chemins mènent à Rome », la ville aurait compté entre un et deux millions d'habitants et domine l'Europe, l'Afrique du Nord et le Moyen-Orient tant militairement que culturellement, diffusant dans ces territoires la langue latine, ses arts et techniques ainsi que la religion chrétienne. Depuis le ier siècle elle abrite le siège de l'Église catholique romaine, au sein des États pontificaux (752-1870) puis de la Cité du Vatican.
+            </div>
+        </div>
+
+        <div class="paragraphe" id="3 1">
+            <div class="gauche">
+                <h1>JEU DE SOCIETE</h1>
+                Colonisation de Madagascar par des Austronésiens à partir du début début de l’ère chrétienne3. L’île de Madagascar est peuplée de Pygmées venus d’Afrique (les mystérieux Vazimbas). Au début de l’ère chrétienne, des Indonésiens auraient débarqué dans l’île après avoir longé la côte orientale de l’Afrique. Vers la même époque, ces Indonésiens auraient introduit des plantes asiatiques jusqu’alors inconnues dans cette région, telles l’igname, la banane et la noix de coco.
+                <br /><br /><br /><br />
+                <button type="button" class="btn btn-danger btn-lg">Success</button>
+            </div>
+            <div class="middle" id="3 2"></div>
+            <div class="droite">
+                <br />
+                L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne. Second berceau de la civilisation occidentale après Athènes, la ville fut successivement le centre de la monarchie romaine, de la république romaine (509 av. J.-C. – 27 av. J.-C.), puis de l'Empire romain (27 av. J.-C. – 330). Durant cette période, où nait la célèbre expression proverbiale « tous les chemins mènent à Rome », la ville aurait compté entre un et deux millions d'habitants et domine l'Europe, l'Afrique du Nord et le Moyen-Orient tant militairement que culturellement, diffusant dans ces territoires la langue latine, ses arts et techniques ainsi que la religion chrétienne. Depuis le ier siècle elle abrite le siège de l'Église catholique romaine, au sein des États pontificaux (752-1870) puis de la Cité du Vatican.
+            </div>
+        </div>
+
+        <div class="paragraphe" id="4 1">
+            <div class="gauche">
+                <h1>DEVELOPPEMENT</h1>
+                Colonisation de Madagascar par des Austronésiens à partir du début début de l’ère chrétienne3. L’île de Madagascar est peuplée de Pygmées venus d’Afrique (les mystérieux Vazimbas). Au début de l’ère chrétienne, des Indonésiens auraient débarqué dans l’île après avoir longé la côte orientale de l’Afrique. Vers la même époque, ces Indonésiens auraient introduit des plantes asiatiques jusqu’alors inconnues dans cette région, telles l’igname, la banane et la noix de coco.
+                <br /><br /><br /><br />
+                <a href="Barcotopya/index.html"><button type="button" class="btn btn-success btn-lg">Tester !</button></a>
+            </div>
+            <div class="middle" id="4 2"></div>
+            <div class="droite">
+                <h1>BARCOTOPYA</h1>
                 L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne. Second berceau de la civilisation occidentale après Athènes, la ville fut successivement le centre de la monarchie romaine, de la république romaine (509 av. J.-C. – 27 av. J.-C.), puis de l'Empire romain (27 av. J.-C. – 330). Durant cette période, où nait la célèbre expression proverbiale « tous les chemins mènent à Rome », la ville aurait compté entre un et deux millions d'habitants et domine l'Europe, l'Afrique du Nord et le Moyen-Orient tant militairement que culturellement, diffusant dans ces territoires la langue latine, ses arts et techniques ainsi que la religion chrétienne. Depuis le ier siècle elle abrite le siège de l'Église catholique romaine, au sein des États pontificaux (752-1870) puis de la Cité du Vatican.
             </div>
         </div>
@@ -64,15 +93,10 @@
         </footer>
         <div class="encadrement"></div>
     </nav>
-
-    <script>
-        resize()
-        function resize() {
-            for (var i = 1; i <= 2; i++) {
-                document.getElementById(i + " 2").style.height = document.getElementById(i + " 1").offsetHeight + "px";
-            }
-        }
-    </script>
 </body>
-
+<script>
+    for (var i = 1; i <= 4; i++) {
+        document.getElementById(i + " 2").style.height = document.getElementById(i + " 1").offsetHeight + "px";
+    }
+</script>
 </html>
