--- a/projets.html
+++ b/projets.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
     <link rel="stylesheet" type="text/css" href="bosstrap.css">
     <link href="https://fonts.googleapis.com/css?family=Anton|Roboto" rel="stylesheet">
     <link rel="shortcut icon" href="Icon.ico">
