mise à jour new site web

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         <div class="titreHeader">ISAAC</div>
         <div class="liensHeader">
             <div class="bouttonLien">
-                <a href="index.html" class="Lien">ACCUEIL</a>
+                <a href="newPage.html" class="Lien">ACCUEIL</a>
             </div>
             <div class="bouttonLien">
                 <a href="projets.html" class="Lien">PROJETS</a>
