--- a/projetsdev.html
+++ b/projetsdev.html
@@ -29,14 +29,14 @@
     </header>
     <nav class="corpAvant">
         <div class="texteTitre">
-            PROJETS,<br />
-            JOYSTICK, JDR,<br /> JDS, ET DEVELOPPEMENT.
+            PROJETS<br />
+            DE DEVELOPPEMENT.
         </div>
     </nav>
     <nav class="corpArriere">
         <div class="paragraphe" id="1 1">
             <div class="gauche">
-                <h1>JOYSTICK</h1>
+                <h1>Le superSimon</h1>
                 Colonisation de Madagascar par des Austronésiens à partir du début début de l’ère chrétienne3. L’île de Madagascar est peuplée de Pygmées venus d’Afrique (les mystérieux Vazimbas). Au début de l’ère chrétienne, des Indonésiens auraient débarqué dans l’île après avoir longé la côte orientale de l’Afrique. Vers la même époque, ces Indonésiens auraient introduit des plantes asiatiques jusqu’alors inconnues dans cette région, telles l’igname, la banane et la noix de coco.
             </div>
             <div class="middle" id="1 2"></div>
@@ -48,36 +48,51 @@
 
         <div class="paragraphe" id="2 1">
             <div class="gauche">
-                <h1>JEU DE RÔLE</h1>
+                <h1>Barcotopya</h1>
                 Colonisation de Madagascar par des Austronésiens à partir du début début de l’ère chrétienne3. L’île de Madagascar est peuplée de Pygmées venus d’Afrique (les mystérieux Vazimbas). Au début de l’ère chrétienne, des Indonésiens auraient débarqué dans l’île après avoir longé la côte orientale de l’Afrique. Vers la même époque, ces Indonésiens auraient introduit des plantes asiatiques jusqu’alors inconnues dans cette région, telles l’igname, la banane et la noix de coco.
-                <br /><br /><br /><br />
-                <button type="button" class="btn btn-success btn-lg">Success</button>
+                <a href="Barcotopya/index.html"><button type="button" class="btn btn-success btn-lg">Tester !</button></a>
             </div>
             <div class="middle" id="2 2"></div>
             <div class="droite">
-                <h1>ACF</h1>
+                <h1>Le concepte : </h1>
                 L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne. Second berceau de la civilisation occidentale après Athènes, la ville fut successivement le centre de la monarchie romaine, de la république romaine (509 av. J.-C. – 27 av. J.-C.), puis de l'Empire romain (27 av. J.-C. – 330). Durant cette période, où nait la célèbre expression proverbiale « tous les chemins mènent à Rome », la ville aurait compté entre un et deux millions d'habitants et domine l'Europe, l'Afrique du Nord et le Moyen-Orient tant militairement que culturellement, diffusant dans ces territoires la langue latine, ses arts et techniques ainsi que la religion chrétienne. Depuis le ier siècle elle abrite le siège de l'Église catholique romaine, au sein des États pontificaux (752-1870) puis de la Cité du Vatican.
             </div>
         </div>
 
         <div class="paragraphe" id="3 1">
             <div class="gauche">
-                <h1>JEU DE SOCIETE</h1>
-                Colonisation de Madagascar par des Austronésiens à partir du début début de l’ère chrétienne3. L’île de Madagascar est peuplée de Pygmées venus d’Afrique (les mystérieux Vazimbas). Au début de l’ère chrétienne, des Indonésiens auraient débarqué dans l’île après avoir longé la côte orientale de l’Afrique. Vers la même époque, ces Indonésiens auraient introduit des plantes asiatiques jusqu’alors inconnues dans cette région, telles l’igname, la banane et la noix de coco.
-                <br /><br /><br /><br />
-                <button type="button" class="btn btn-danger btn-lg">Success</button>
+                <h1>Les jeux scratch</h1>
+                <h2>Saute !</h2>
+                <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/179725328/?autostart=false" frameborder="0" allowfullscreen></iframe>
+                <p style="color:darkslategray">Si le jeu ne charge pas, essayez d'activer flash ou d'attendre.</p>
+                <p>Dans ce jeu vous devez Sauter par dessus les flèches pour réussir à tenir le plus longtemps possible te peut-être battre le record !</p>
+                <br />
+                <br />
+                <h2>Canon !</h2>
+                <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/230381285/?autostart=false" frameborder="0" allowfullscreen></iframe>
+                <p style="color:darkslategray">Si le jeu ne charge pas, essayez d'activer flash ou d'attendre.</p>
+                <p>Dans ce jeu vous tirer (avec espace ) sur le chateau et respectant la jauge de puissance !</p>
             </div>
             <div class="middle" id="3 2"></div>
             <div class="droite">
                 <br />
-                L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne.  L'histoire de Rome s'étend sur plus de vingt-huit siècles, depuis sa fondation mythique par Romulus en 753 av. J.-C. jusqu'à son rôle actuel de capitale de la république italienne. Second berceau de la civilisation occidentale après Athènes, la ville fut successivement le centre de la monarchie romaine, de la république romaine (509 av. J.-C. – 27 av. J.-C.), puis de l'Empire romain (27 av. J.-C. – 330). Durant cette période, où nait la célèbre expression proverbiale « tous les chemins mènent à Rome », la ville aurait compté entre un et deux millions d'habitants et domine l'Europe, l'Afrique du Nord et le Moyen-Orient tant militairement que culturellement, diffusant dans ces territoires la langue latine, ses arts et techniques ainsi que la religion chrétienne. Depuis le ier siècle elle abrite le siège de l'Église catholique romaine, au sein des États pontificaux (752-1870) puis de la Cité du Vatican.
+                <br />
+                <br />
+                J'ai créé divers jeux présent ici : vous pouvez y jouer directement.
+                <br />
+                <br />
+                <h2>Clique !</h2>
+                <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/234980632/?autostart=false" frameborder="0" allowfullscreen></iframe>
+                <p style="color:darkslategray">Si le jeu ne charge pas, essayez d'activer flash ou d'attendre.</p>
+                <br />
+                <p>Dans ce jeu vous devez cliquer sur les lettres correspondant aux couleurs défilantes ! attention, si vous cliquez trop tôt ou trop tard vous perdez des vies !</p>
             </div>
         </div>
 
         <div class="paragraphe" id="4 1">
             <div class="gauche">
-                <h1>DEVELOPPEMENT</h1>
-                    J'ai créé plusieurs projets en développement, tel un Super simon ou d'autres jeu sur srcatch, JS finis ou pas.... 
+                <h1>Autre</h1>
+                J'ai créé plusieurs projets en développement, tel un Super simon ou d'autres jeu sur srcatch, JS finis ou pas....
                 <br /><br /><br /><br />
                 <a href="Barcotopya/index.html"><button type="button" class="btn btn-success btn-lg">Tester !</button></a>
             </div>
@@ -86,7 +101,8 @@
                 <h1>Mon histoire</h1>
                 Je code depuis l'age de 8 ans, J'ai découvert le code grâce à un magazine qui proposais de créer un jeu sur scratch, et c'est là que tout a commencé !
                 <br />
-                Depuis j'ai créé plusieurs jeux sur scratch, python , jusqu'a aujourd'hui où je code en HTML, CSS et JS.<br />
+                Depuis j'ai créé plusieurs jeux sur scratch, python , jusqu'a aujourd'hui où je code en HTML, CSS et JS. 
+                <br /><br />
                 <a href="projetsdev.html"><button type="button" class="btn btn-primary btn-lg">Voir la page des différents projets</button></a>
             </div>
         </div>
