--- a/projetsdev.html
+++ b/projetsdev.html
@@ -30,7 +30,7 @@
     <nav class="corpAvant">
         <div class="texteTitre">
             PROJETS<br />
-            DE DEVELOPPEMENT.
+            DE DEVELOPPEMENTS.
         </div>
     </nav>
     <nav class="corpArriere">
