responsive objets scratch

--- a/projetsdev.html
+++ b/projetsdev.html
@@ -30,7 +30,7 @@
     <nav class="corpAvant">
         <div class="texteTitre">
             PROJETS<br />
-            DE DEVELOPPEMENTS.
+            DE DEVELOPPEMENT.
         </div>
     </nav>
     <nav class="corpArriere">
@@ -63,13 +63,13 @@
             <div class="gauche">
                 <h1>Les jeux scratch</h1>
                 <h2>Saute !</h2>
-                <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/179725328/?autostart=false" frameborder="0" allowfullscreen></iframe>
+                <iframe allowtransparency="true"  src="//scratch.mit.edu/projects/embed/179725328/?autostart=false" frameborder="0" allowfullscreen></iframe>
                 <p style="color:darkslategray">Si le jeu ne charge pas, essayez d'activer flash ou d'attendre.</p>
                 <p>Dans ce jeu vous devez Sauter par dessus les flèches pour réussir à tenir le plus longtemps possible te peut-être battre le record !</p>
                 <br />
                 <br />
                 <h2>Canon !</h2>
-                <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/230381285/?autostart=false" frameborder="0" allowfullscreen></iframe>
+                <iframe allowtransparency="true"  src="//scratch.mit.edu/projects/embed/230381285/?autostart=false" frameborder="0" allowfullscreen></iframe>
                 <p style="color:darkslategray">Si le jeu ne charge pas, essayez d'activer flash ou d'attendre.</p>
                 <p>Dans ce jeu vous tirer (avec espace ) sur le chateau et respectant la jauge de puissance !</p>
             </div>
@@ -82,7 +82,7 @@
                 <br />
                 <br />
                 <h2>Clique !</h2>
-                <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/234980632/?autostart=false" frameborder="0" allowfullscreen></iframe>
+                <iframe allowtransparency="true"  src="//scratch.mit.edu/projects/embed/234980632/?autostart=false" frameborder="0" allowfullscreen></iframe>
                 <p style="color:darkslategray">Si le jeu ne charge pas, essayez d'activer flash ou d'attendre.</p>
                 <br />
                 <p>Dans ce jeu vous devez cliquer sur les lettres correspondant aux couleurs défilantes ! attention, si vous cliquez trop tôt ou trop tard vous perdez des vies !</p>
