--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                     <a href="page.html"><button type="button" class="btn btn-danger">clique ici pour aller sur mon site web !</button></a>
                 </p>
                 <p class="paragraphe">
-                    <a href="newPage.html"><button type="button" class="btn btn-danger">clique ici pour aller le nouveau site web en création !</button></a>
+                    <a href="portfolio/index.html"><button type="button" class="btn btn-danger">clique ici pour aller le nouveau site web en création !</button></a>
                 </p>
                 <p class="paragraphe">
                     <a href="https://orphean-hangars.000webhostapp.com/"><button type="button" class="btn btn-succes">clique ici pour tester mon nouveau jeu vidéo en création !</button></a>
