--- a/projetsdev.html
+++ b/projetsdev.html
@@ -15,10 +15,13 @@
         <div class="titreHeader">ISAAC</div>
         <div class="liensHeader">
             <div class="bouttonLien">
-                <a href="newPage.html" class="Lien">ACCUEIL</a>
+                <a href="index.html" class="Lien">ACCUEIL</a>
             </div>
             <div class="bouttonLien">
                 <a href="projets.html" class="Lien">PROJETS</a>
+            </div>
+            <div class="bouttonLien">
+                <a href="cours.html" class="Lien" style="font-size: 18px;">COURS HTML</a>
             </div>
             <div class="bouttonLien">
                 <a href="contact.html" class="Lien">CONTACT</a>
@@ -62,14 +65,9 @@
         
         <div class="encadrement"></div>
         <footer>
-            Tout droit réservé à Isaac MENARD
-        </footer>
+                Tout droit réservé à Isaac MENARD<br>En continuant votre navigation sur ce site, vous acceptez l'utilisation des cookies.(Même si il n'y en a pas)
+            </footer>
         <div class="encadrement"></div>
     </nav>
 </body>
-<script>
-    for (var i = 1; i <= 2; i++) {
-        document.getElementById(i + " 2").style.height = document.getElementById(i + " 1").offsetHeight + "px";
-    }
-</script>
 </html>
