--- a/cours.html
+++ b/cours.html
@@ -108,7 +108,7 @@
                 <p>Pour faire un lien comme <a href="https://google.fr">ici</a>, vous devrez faire une balise <code> < a > </code>.</p>
                 <p>Dans l'attribut <code>href</code>, vous devrez y renseigner le lien ou vous souhaitez renvoyer l'utilisateur</p>
                 <p>Une fois cela fait, vous pouvez mettre le texte qui permettra à l'utilisateur d'aller vers votre lien.</p>
-                <p>(exemple :  <img src="lienA.png"> )</p>
+                <p>(exemple :  <img src="lienA.PNG"> )</p>
                 <div class="middle" id="2 2"></div>
                 <h1>Les types de liens !</h1>
                 <p>Il y a plusieurs types de liens : les liens <a>externes</a> et les liens <a>internes</a></p>
