--- a/cours.html
+++ b/cours.html
@@ -120,19 +120,19 @@
                 <img src="fichierCours.PNG" style="width: 900px;height: auto;">
                 <br>
                 <br>
-                <p>Pour le mettre comme un lien, vous devrez simplement mettre son nom dans l'attribut href : <img src="lienInterne.png"></p>
+                <p>Pour le mettre comme un lien, vous devrez simplement mettre son nom dans l'attribut href : <img src="lienInterne.PNG"></p>
                 <h3>Pour mettre un lien se trouvant dans un dossier en dessous : </h3>
                 <br>
                 <img src="dossierLienInterne.PNG" style="width: 900px;height: auto;">
                 <br>
                 <br>
-                <p>Pour le mettre comme un lien, vous devrez simplement mettre le nom du dossier suivi d'un <a>/</a> et du nom du fichier dans l'attribut href : <img src="lienInterneSousDoc.png"></p>
+                <p>Pour le mettre comme un lien, vous devrez simplement mettre le nom du dossier suivi d'un <a>/</a> et du nom du fichier dans l'attribut href : <img src="lienInterneSousDoc.PNG"></p>
                 <h3>Pour mettre un lien se trouvant dans un dossier au dessus : </h3>
                 <br>
                 <img src="dossierLienInterneDessus.PNG" style="width: 900px;height: auto;">
                 <br>
                 <br>
-                <p>Pour le mettre comme un lien, vous devrez simplement mettre <a>../</a> et du nom du fichier dans l'attribut href : <img src="lienInterneSurDoc.png"></p>
+                <p>Pour le mettre comme un lien, vous devrez simplement mettre <a>../</a> et du nom du fichier dans l'attribut href : <img src="lienInterneSurDoc.PNG"></p>
             </div>
         </div>
         <div class="paragraphe" id="2 1">
