--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                 <div class="texte">
                     <h1>Mon profil</h1>
                     Je suis Isaac, un jeune développeur web qui code en HTML, CSS, js, php, Mysql et un peu en java.
-                    J'ai créé beaucoup de petits projets assez simpa qui sont disponibles <a href="projets.html" class="Lien">ici</a> !
+                    J'ai créé beaucoup de petits projets assez sympas qui sont disponibles <a href="projets.html" class="Lien">ici</a> !
                 </div>
                 <div class="middle" id="1 2"></div>
                 <div class="texte">
                     <h1>Mes activitées</h1>
                     Actuelement, je suis développeur mais aussi Sapeur Pompier ! <br>
-                    Enfin.. je serais recruté le 1 juillet 2019. Car en attendant, je suis en formation depuis 3 ans :<br> j'ai appris à maîtriser des <a>crocodiles</a> , 
-                    des <a>serpents</a> ou encore à faire des <a>acouchements</a> 
+                    Enfin.. je serais recruté le 1 juillet 2019 car en attendant, je suis en formation depuis 3 ans :<br> j'ai appris à maîtriser des <a>crocodiles</a> , 
+                    des <a>serpents</a> ou encore à intervenir face à des <a>accouchements</a> 
                 </div>
             </div>
             <div class="encadrement"></div>
