--- a/projets.html
+++ b/projets.html
@@ -144,6 +144,13 @@
                 <a href="Barcotopya/index.html"><button type="button" class="btn btn-success btn-lg">Tester
                         !</button></a>
             </div>
+            <div class="middle" id="4 2"></div>
+            <div class="texte">
+                <h1>Un loup garou en ligne !</h1>
+                Ceci est un outils permettant de désigner un MJ et les rôles du jeux sans passer par les cartes.<br><br>
+                <a href="https://loupgarou-isaac.000webhostapp.com"><button type="button" class="btn btn-success btn-lg">Tester
+                        !</button></a>
+            </div>
         </div>
 
         <div class="paragraphe" id="4 1">
