--- a/SI SVT/desy.html
+++ b/SI SVT/desy.html
@@ -29,7 +29,7 @@
     <h2 id="titrehaut" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">La
         déshydratation :</h2>
     <div class="paragraphe" style="text-align: center">
-        <img src="tableau.png">
+        <img src="tableau.PNG">
     </div>
 </body>
 
