--- a/SI SVT/index.html
+++ b/SI SVT/index.html
@@ -33,7 +33,7 @@
         Traite 350 000 tonnes de déchets résiduels (non recyclable) par an.<br>Il évacue au moins 95% des déchets
         résiduels du sud du Pays de Galles des sites d'enfouissement et génère 30 MW d'électricité pour le réseau
         national => 50 000 foyers.
-        <div class="imgCentrale"></div>
+        <img src="centrale.PNG" class="imgCentrale"/>
     </div>
 </body>
 
