--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Portfolio V2</title>
+    <title>Isaac Menard - Portfolio !</title>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+	<meta name="description" content="Bienvenue sur mon portfolio ! Je suis Isaac, un lycéen sapeur pompier et développeur !" />
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" media="screen" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Squada+One&display=swap" rel="stylesheet">
