--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     Dragon</a>. C'est un Rpg où votre but est d'accomplir différentes quêtes dans un monde isométric !
             </p>
 			<p>Et mon second : <a href="paumePhone.apk"
-   download="paumePhone">paume phone ! </a> le concept est simple, vous paumez votre phone, vous allez sur l'applie et vous retrouvez votre phone !</p>
+   download="paumePhone">Paume Phone ! </a> le concept est simple, vous paumez votre phone, vous allez sur l'applie et vous retrouvez votre phone !</p>
         </div>
     </div>
     <div class="page page4Div">
