--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Isaac Menard - Portfolio !</title>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<meta name="description" content="Bienvenue sur mon portfolio ! Je suis Isaac, un lycéen sapeur pompier et développeur !" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" media="screen" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Squada+One&display=swap" rel="stylesheet">
@@ -19,14 +20,14 @@
     <ul class="portrait">
         <li><a class="page1 active" onclick="page(this)"><i class="fas fa-home"></i></a></li>
         <li><a class="page2" onclick="page(this)"><i class="fas fa-clipboard-list"></i></a></li>
-        <li><a class="page3" onclick="page(this)"><i class="fas fa-code"></i></a></li>
+        <li><a class="page3" onclick="page(this)" href="mesProjets.html"><i class="fas fa-code"></i></a></li>
         <li><a class="page4" onclick="page(this)"><i class="fas fa-fire-extinguisher"></i></a></li>
         <li><a class="page5" onclick="page(this)"><i class="fas fa-quote-right"></i></i></a></li>
     </ul>
 	<ul class="paysage">
         <a class="page1 active" onclick="page(this)"><i class="fas fa-home"></i></a>
         <a class="page2" onclick="page(this)"><i class="fas fa-clipboard-list"></i></a>
-        <a class="page3" onclick="page(this)"><i class="fas fa-code"></i></a>
+        <a class="page3" onclick="page(this)"  href="mesProjets.html"><i class="fas fa-code"></i></a>
         <a class="page4" onclick="page(this)"><i class="fas fa-fire-extinguisher"></i></a>
         <a class="page5" onclick="page(this)"><i class="fas fa-quote-right"></i></i></a>
     </ul>
