--- a/Escalade/index.html
+++ b/Escalade/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark"> <a class="navbar-brand" href="#">Acceuil<span class="badge badge-secondary"></span></a>
+	<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark"> <a class="navbar-brand" href="#">Accueil<span class="badge badge-secondary"></span></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
