--- a/Escalade/index.html
+++ b/Escalade/index.html
@@ -8,7 +8,8 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark"> <a class="navbar-brand" href="#">Accueil<span class="badge badge-secondary"></span></a>
+	<div class="loadingPage"><div id="loadingAnimation" class="lds-ring"><div></div><div></div><div></div><div></div></div></div>
+	<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark"> <a class="navbar-brand" href="index.html"><img style="width: 30px" src="imagesEscalades/pieces/iconEscalade.png"><span class="badge badge-secondary"></span></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -19,7 +20,19 @@
   </div>
 </nav>
 	
-	<a href="listePlans.html"><h1 style="color: antiquewhite;text-align: center;margin: 20px;">Voir la liste Des Plans disponibles !</h1></a>
+	<header>
+		<h1>Escaplication !</h1>
+		<p>Bienvenue sur Escaplication, le concept est simple, vous avez accès à la liste des murs de votre club (voir la liste plus bas). En selectionnant le mur de votre choix, vous pourrez voir une animation des différents gestes pour réussir le mur.</p>
+		<img style="width: 10%" src="imagesEscalades/pieces/eescaladeur.png">
+			<a href="listePlans.html"><br><button type="button" id="boutton" class="btn btn-warning"><h2 style="text-align: center;margin: 20px;">Voir la liste Des Plans disponibles !</h2></button></a>
+	</header>
+	
+	
+<script>
+$(document).ready(function(){
+	document.getElementsByClassName("loadingPage")[0].style.visibility = "hidden"
+});	
+</script>
 	
 </body>
 </html>
