--- a/Escalade/index.html
+++ b/Escalade/index.html
@@ -36,7 +36,8 @@ $(document).ready(function(){
 	document.getElementsByClassName("loadingPage")[0].style.visibility = "hidden"
 });	
 </script>
-	
+	<img style="visibility: hidden;position: fixed;" src="imagesEscalades/pieces/bady-qb-VmYZe_yqxL0-unsplash.jpg">
+	<img style="visibility: hidden;position: fixed;" src="imagesEscalades/pieces/sabrina-wendl-h2NlwNkA2h8-unsplash.jpg">
 </body>
 </html>
 
