--- a/foxSkied/index.html
+++ b/foxSkied/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Isaac Menard - Portfolio !</title>
-<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+<title>SkiedFox</title>
 <meta name="description" content="Bienvenue sur mon portfolio ! Je suis Isaac, un lycéen sapeur pompier et développeur !" />
 	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
@@ -16,11 +15,26 @@
 </head>
 
 <body>
-	<img src="background.jpg"  class="background"/>
-<div class="sign">
-     <h1>Montage</h1>
-	<div class="bar"></div>
- </div>
-	<div class="next" onclick="load('page1')"><i class="fas fa-chevron-right rotate"></i></div>
+		<img src="background.jpg"  class="background"/>
+	<header>
+		<div class="left">SKIEDFOX</div>
+		<div class="center">
+			<a class="active">MONTAGE</a>
+			<a>MINECRAFT</a>
+			<a>GAMING</a>
+			<a>ABOUT ME</a>
+		</div>
+		<div class="right">
+			<img src="insta.png"><img src="youtube.png"><img src="facebook.png"><img src="twitter.png">
+		</div>
+	</header>
+	<div class="sign">
+		 <h1>Montage</h1>
+		<div class="bar"></div>
+		<p>Some text here but je sais pas quoi mais un truc genre hyper coo, tu vois le genre</p>
+	 </div>
+	<img src="arrow.png" class="arrow leftArrow">
+	<img src="arrow.png" class="arrow rightArrow">
+	<div class="next" onclick="load('page1')"><img src="arrow.png" class="arrow"></div>
 </body>
 </html>
