--- a/foxSkied/index.html
+++ b/foxSkied/index.html
@@ -28,13 +28,22 @@
 			<img src="insta.png"><img src="youtube.png"><img src="facebook.png"><img src="twitter.png">
 		</div>
 	</header>
-	<div class="sign">
-		 <h1>Montage</h1>
-		<div class="bar"></div>
-		<p>Some text here but je sais pas quoi mais un truc genre hyper coo, tu vois le genre</p>
-	 </div>
+	<div id="home">
+		<div class="sign">
+			 <h1>Montage</h1>
+			<div class="bar"></div>
+			<p>Some text here but je sais pas quoi mais un truc genre hyper coo, tu vois le genre</p>
+		 </div>
+	</div>
+	<div id="textHome">
+		<div class="centerDiv">
+			<div class="card"><p>Vidéo simple</p><hr><br><br><br><br><hr><p class="bottom">10 €</p></div>
+			<div class="card"><p>Court métrage</p><hr><br><br><br><br><hr><p class="bottom">30 €</p></div>
+			<div class="card"><p>Long métrage</p><hr><br><br><br><br><hr><p class="bottom">Prix sur demande</p></div>
+		</div>
+	</div>
 	<img src="arrow.png" class="arrow leftArrow">
 	<img src="arrow.png" class="arrow rightArrow">
-	<div class="next" onclick="load('page1')"><img src="arrow.png" class="arrow"></div>
+	<div class="next" onclick="load()"><img id="montageNext"  src="arrow.png" class="arrow"></div>
 </body>
 </html>
