--- a/foxSkied/gaming.html
+++ b/foxSkied/gaming.html
@@ -19,9 +19,9 @@
 	<header>
 		<div class="left">SKIEDFOX</div>
 		<div class="center">
-			<a href="index.html" class="active">MONTAGE</a>
+			<a href="index.html">MONTAGE</a>
 			<a href="minecraft.html">MINECRAFT</a>
-			<a href="gaming.html">GAMING</a>
+			<a href="gamming.html" class="active">GAMING</a>
 			<a>ABOUT ME</a>
 		</div>
 		<div class="right">
@@ -30,7 +30,7 @@
 	</header>
 	<div id="home">
 		<div class="sign">
-			 <h1>Montage</h1>
+			 <h1>Gaming</h1>
 			<div class="bar"></div>
 			<p>Some text here but je sais pas quoi mais un truc genre hyper coo, tu vois le genre</p>
 		 </div>
