--- a/foxSkied/index.html
+++ b/foxSkied/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-		<img src="background.jpg"  class="background"/>
+		<img src="backgroundMontage.jpg" style="width: 100%;height: auto;" class="background"/>
 	<header>
 		<div class="left">SKIEDFOX</div>
 		<div class="center">
