--- a/foxSkied/minecraft.html
+++ b/foxSkied/minecraft.html
@@ -15,7 +15,9 @@
 </head>
 
 <body>
-		<img src="background.jpg"  class="background"/>
+	<style>body:before{background-image: url("backgroundMinecraftbad.png");}
+	</style>
+		<img src="backgroundMinecraft.png"  style="width: 100%;height: auto;"  class="background"/>
 	<header>
 		<div class="left">SKIEDFOX</div>
 		<div class="center">
