--- a/foxSkied/gaming.html
+++ b/foxSkied/gaming.html
@@ -22,7 +22,7 @@
 			<a href="index.html">MONTAGE</a>
 			<a href="minecraft.html">MINECRAFT</a>
 			<a href="gamming.html" class="active">GAMING</a>
-			<a>ABOUT ME</a>
+			<a href="about.html" >ABOUT ME</a>
 		</div>
 		<div class="right">
 			<img src="insta.png"><img src="youtube.png"><img src="facebook.png"><img src="twitter.png">
@@ -42,8 +42,8 @@
 			<div class="card"><p>Long métrage</p><hr><br><br><br><br><hr><p class="bottom">Prix sur demande</p></div>
 		</div>
 	</div>
-	<img src="arrow.png" class="arrow leftArrow">
-	<img src="arrow.png" class="arrow rightArrow">
+	<img src="arrow.png" class="arrow leftArrow"  onclick="window.location = 'minecraft.html'">
+	<img src="arrow.png" class="arrow rightArrow"  onclick="window.location = 'about.html'">
 	<div class="next" onclick="load()"><img id="montageNext"  src="arrow.png" class="arrow"></div>
 </body>
 </html>
