--- a/foxSkied/index.html
+++ b/foxSkied/index.html
@@ -41,7 +41,7 @@
 			<a href="index.html" class="active">MONTAGE</a>
 			<a href="minecraft.html">MINECRAFT</a>
 			<a href="gaming.html">GAMING</a>
-			<a>ABOUT ME</a>
+			<a href="about.html" >ABOUT ME</a>
 		</div>
 		<div class="right">
 			<img src="insta.png"><img src="youtube.png"><img src="facebook.png"><img src="twitter.png">
@@ -61,8 +61,7 @@
 			<div class="card"><p>Long métrage</p><hr><br><br><br><br><hr><p class="bottom">Prix sur demande</p></div>
 		</div>
 	</div>
-	<img src="arrow.png" class="arrow leftArrow">
-	<img src="arrow.png" class="arrow rightArrow">
+	<img src="arrow.png" class="arrow rightArrow" onclick="window.location = 'minecraft.html'">
 	<div class="next" onclick="load()"><img id="montageNext"  src="arrow.png" class="arrow"></div>
 </body>
 </html>
