--- a/foxSkied/about.html
+++ b/foxSkied/about.html
@@ -15,16 +15,33 @@
 </head>
 
 <body>
-	<style>body:before{background-image: url("backgroundMinecraftbad.png");}
+	<style>body:before{background-image: url("backgroundMontagebad.png");}
+		body,header,header .center a{
+			color: rgba(15,15,15,1.00);
+		}
+		header{
+			filter: drop-shadow(0 0 0.05rem black);
+		}
+		header .right{
+			filter: drop-shadow(0 0 0.75rem rgba(15,15,15,0.40););
+		}
+		.sign h1{
+			filter: drop-shadow(0 0 0.05rem black);
+		}
+		.sign p{
+			filter: drop-shadow(0 0 0.05rem black);
+			color: rgba(15,15,15,1.00);
+		}
 	</style>
-		<img src="backgroundMinecraft.png"  style="width: 100%;height: auto;"  class="background"/>
+	
+	<img src="backgroundMontage.jpg" style="width: 100%;height: auto;" class="background"/>
 	<header>
 		<div class="left">SKIEDFOX</div>
 		<div class="center">
 			<a href="index.html">MONTAGE</a>
-			<a href="minecraft.html" class="active">MINECRAFT</a>
+			<a href="minecraft.html">MINECRAFT</a>
 			<a href="gaming.html">GAMING</a>
-			<a href="about.html" >ABOUT ME</a>
+			<a href="about.html" class="active">ABOUT ME</a>
 		</div>
 		<div class="right">
 			<img src="insta.png"><img src="youtube.png"><img src="facebook.png"><img src="twitter.png">
@@ -32,7 +49,7 @@
 	</header>
 	<div id="home">
 		<div class="sign">
-			 <h1>Minecraft</h1>
+			 <h1>Notre ENtreprise</h1>
 			<div class="bar"></div>
 			<p>Some text here but je sais pas quoi mais un truc genre hyper coo, tu vois le genre</p>
 		 </div>
@@ -44,8 +61,7 @@
 			<div class="card"><p>Long métrage</p><hr><br><br><br><br><hr><p class="bottom">Prix sur demande</p></div>
 		</div>
 	</div>
-	<img src="arrow.png" class="arrow leftArrow"  onclick="window.location = './'">
-	<img src="arrow.png" class="arrow rightArrow"  onclick="window.location = 'gaming.html'">
+	<img src="arrow.png" class="arrow rightArrow" onclick="window.location = 'minecraft.html'">
 	<div class="next" onclick="load()"><img id="montageNext"  src="arrow.png" class="arrow"></div>
 </body>
 </html>
