--- a/foxSkied/minecraft.html
+++ b/foxSkied/minecraft.html
@@ -44,7 +44,7 @@
 			<div class="card"><p>Long métrage</p><hr><br><br><br><br><hr><p class="bottom">Prix sur demande</p></div>
 		</div>
 	</div>
-	<img src="arrow.png" class="arrow leftArrow"  onclick="window.location = './'">
+	<img src="arrow.png" class="arrow leftArrow"  onclick="window.location = 'index.html'">
 	<img src="arrow.png" class="arrow rightArrow"  onclick="window.location = 'gaming.html'">
 	<div class="next" onclick="load()"><img id="montageNext"  src="arrow.png" class="arrow"></div>
 </body>
