--- a/foxSkied/index.html
+++ b/foxSkied/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<style>body:before{background-image: url("backgroundMontagebad.png");}
+	<style>body:before{background-image: url("backgroundMontageBad.png");}
 		body,header,header .center a{
 			color: rgba(15,15,15,1.00);
 		}
