--- a/foxSkied/about.html
+++ b/foxSkied/about.html
@@ -61,7 +61,7 @@
 			<div class="card"><p>Long métrage</p><hr><br><br><br><br><hr><p class="bottom">Prix sur demande</p></div>
 		</div>
 	</div>
-	<img src="arrow.png" class="arrow rightArrow" onclick="window.location = 'minecraft.html'">
+	<img src="arrow.png" class="arrow leftArrow" onclick="window.location = 'minecraft.html'">
 	<div class="next" onclick="load()"><img id="montageNext"  src="arrow.png" class="arrow"></div>
 </body>
 </html>
